# EngineLaMusique

./: .gitignore  LICENSE  README.md  dynamic1.py  dynamic2.py  dynamic3.py  dynamic4.py  dynamic5.py  pyproject.toml  start_engine.bat  test_workflow.py
EngineLaMusique/: README.md  __init__.py  audio_engine.py  conductor.py  main.py  music_theory.py  test_guitar.py  test_styles.py
EngineLaMusique/effects/: __init__.py
EngineLaMusique/instruments/: __init__.py  drums.py  guitar.py  synthesizer.py
