[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "EngineLaMusique"
version = "0.1.0"
description = "A procedural, generative music engine with real-time DSP — synthesized instruments, smart chord progressions, and live parameter control"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Anish"},
]
keywords = ["music", "generative", "synthesizer", "dsp", "audio", "procedural", "real-time"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
]
dependencies = [
    "numpy",
    "pyaudio",
]

[project.optional-dependencies]
full = ["scipy"]

[project.scripts]
EngineLaMusique = "EngineLaMusique.main:main"

[project.urls]
Homepage = "https://github.com/Anish-MutliTalent/EngineLaMusique"
Repository = "https://github.com/Anish-MutliTalent/EngineLaMusique"
Issues = "https://github.com/Anish-MutliTalent/EngineLaMusique/issues"

[tool.setuptools.packages.find]
include = ["EngineLaMusique*"]
